* Update the ChangeLog entries when merging items from -stable.
(4.2.7p29) 2010/05/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1542] ntpd mrulist response may have incorrect last.older.
* [Bug 1543] ntpq mrulist must refresh nonce when retrying.
* [Bug 1544] ntpq mrulist sscanf timestamp format mismatch on 64-bit.
* Windows compiling hints/winnt.html update from Sunil Tej S.
(4.2.7p28) 2010/05/03 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1512] from 4.2.6p2-RC3: ntpsnmpd should connect to net-snmpd
  via a unix-domain socket by default.
  Provide a command-line 'socket name' option.
* [Bug 1538] from 4.2.6p2-RC3: update refclock_nmea.c's call to
  getprotobyname().
* [Bug 1541] from 4.2.6p2-RC3: Fix wrong keyword for "maxclock".
(4.2.7p27) 2010/04/27 Released by Harlan Stenn <stenn@ntp.org>
(4.2.7p26) 2010/04/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1465] from 4.2.6p2-RC2: Make sure time from TS2100 is not
  invalid (backport from -dev).
* [Bug 1528] from 4.2.6p2-RC2: Fix EDITLINE_LIBS link order for ntpq
  and ntpdc.
* [Bug 1531] Require nonce with mrulist requests.
* [Bug 1532] Remove ntpd support for ntpdc's monlist in favor of ntpq's
mrulist.
* [Bug 1534] from 4.2.6p2-RC2: conflicts with VC++ 2010 errno.h.
* [Bug 1535] from 4.2.6p2-RC2: "restrict -4 default" and "restrict
  -6 default" ignored.
(4.2.7p25) 2010/04/20 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1528] from 4.2.6p2-RC2: Remove --with-arlib from br-flock.
* [Bug 1503] [Bug 1504] [Bug 1518] [Bug 1522] from 4.2.6p2-RC2:
  all of which were fixed in 4.2.7 previously. 
(4.2.7p24) 2010/04/13 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1390] Control PPS on the Oncore M12.
* [Bug 1518] Windows ntpd should lock to one processor more
  conservatively.
* [Bug 1520] '%u' formats for size_t gives warnings with 64-bit builds.
* [Bug 1522] Enable range syntax "trustedkey (301 ... 399)".
* Documentation updates for 4.2.7p22 changes and additions, updating